--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     rel="stylesheet">
   <title>portifolio</title>
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMMK0TQHXH"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5TNF1QN7MB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-ZMMK0TQHXH');
+  gtag('config', 'G-5TNF1QN7MB');
 </script>
 </head>
 
